[package]
name = "cc-method-lib"
version = "0.1.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
edition = "2018"

[dependencies]
argh = "0.1"

[dependencies.bellframe]
version = "0.3.0-alpha"
# The only default feature is `cc_lib` but we don't need to access the CC library directly, and it
# would be nice to not have to compile ~100 extra dependencies required by `reqwest`
default_features = false
features = ["cc_lib_gen"]
